--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="documents/GitHub/forganlu.github.io/css/mysite.css">
+<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>my site</title>
 </head>
 	
@@ -14,8 +14,8 @@
 	<figure>
 		<div class="img-area">
 			<a href="index.html">
-				<img src="../image/logo1.png" alt="" class="img-back">
-				<img src="../image/logo2.png" alt="" class="img-front">
+				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
+				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
 		</div>
 		
