--- a/html/index-contact.html
+++ b/html/index-contact.html
@@ -35,7 +35,7 @@
 			<li><a href="photography/mysite-photography.html">摄影</a></li>
 			<li><a href="writing/mysite-writing.html">文字</a></li>
 			<li><a href="mysite-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/html/index-contact.html">联络</a></li>
+			<li><a href="../html/index-contact.html">联络</a></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -45,15 +45,23 @@
 			<li><a href="photography/mysite-photography.html">photography</a></li>
 			<li><a href="writing/mysite-writing.html">writing</a></li>
 			<li><a href="mysite-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/html/index-contact.html">contact</a></li>
+			<li><a href="../html/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
 	<div class="about"></div>
 	
 		
 </div>
-
-
+<div class="about">
+	<div class="portfoliopic"></div>
+	<div class="aboutinfo">
+		<strong>Gan Lu</strong>
+		<p>&nbsp;</p>
+		<p>Email: ganlu2525@outlook.com</p>
+		<p>Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></p>
+	
+	</div>
+</div>
 </main>
 
 <footer>
