--- a/html/index-contact.html
+++ b/html/index-contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
+<link rel="stylesheet" href="../css/mysite.css">
 <title>Ganlu</title>
 </head>
 	
