--- a/html/index-contact.html
+++ b/html/index-contact.html
@@ -14,8 +14,8 @@
 	<figure>
 		<div class="img-area">
 			<a href="index.html">
-				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
-				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
+				<img src="../image/logo1.png" alt="" class="img-back">
+				<img src="../image/logo2.png" alt="" class="img-front">
 			</a>
 		</div>
 		
@@ -48,17 +48,19 @@
 			<li><a href="../html/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
-	<div class="about"></div>
 	
 		
 </div>
 <div class="about">
 	<div class="portfoliopic"></div>
 	<div class="aboutinfo">
-		<strong>Gan Lu</strong>
-		<p>&nbsp;</p>
-		<p>Email: ganlu2525@outlook.com</p>
-		<p>Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></p>
+		<span style="background-color:white" >
+			<strong>Gan Lu</strong>
+			<p>&nbsp;</p>
+			Email: ganlu2525@outlook.com
+			<p></p>
+			Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a>
+		</span>
 	
 	</div>
 </div>
