--- a/html/index-about.html
+++ b/html/index-about.html
@@ -52,14 +52,40 @@
 		
 </div>
 <div class="about">
-	<div class="portfoliopic"></div>
+	<div class="portfoliopic1"></div>
 	<div class="aboutinfo">
+		
+	
+		<p>
 		<span style="background-color:white" >
 			<strong>Gan Lu</strong>
+			<p></p>
+			Born 1998, China.
+			<br />
+			Based in Guangzhou / Hong Kong
+			<p></p>
+			BFA - Studio 5 of Oil Painting Department of Guangzhou Academic of Fine Art
+			<br />
+			MFA - Creative Media of City University of Hong Kong
 			<p>&nbsp;</p>
-			Email: ganlu2525@outlook.com<br />
-			Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a>
+			<strong>Selected Exhibition</strong><br />
+			<p></p>
+			2021  <strong>Furment</strong> - Creative Media Year1 MFA show
+			<p></p>
+			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum<br />
+			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA<br />
+			2020  <strong>The choice of the graduation star in 2020</strong> - OCAT Shenzhen OCT Harbour Exhibition Site – Boxes Art Space<br />
+			2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery<br />
+			2020  <strong>GAFA Graduation Exhibition</strong> - GAFA online Art museum<br />
+			<p></p>
+			2019  <strong>Visual Games</strong> - Foshan Guicheng Art Museum<br />
+			<p></p>
+			2018  <strong>東方·來信 Inter-Youth</strong> - China Academic of Fine Art Museum<br />
+			2018  <strong>Ritz’s Dream</strong> (solo) - The Fifth Studio Exhibition Hall of GAFA<br />
+			2017  <strong>the Fifth Studio</strong> - the Art Museum of Guangzhou Academy of Fine Arts<br />
+			
 		</span>
+		</p>
 	
 	</div>
 </div>
