--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<li><a href="painting/mysite-painting.html">绘画</a></li>
 			<li><a href="photography/mysite-photography.html">摄影</a></li>
 			<li><a href="writing/mysite-writing.html">文字</a></li>
-			<li><a href="mysite-about.html">关于</a></li>
+			<li><a href="../html/index-about.html">关于</a></li>
 			<li><a href="../forganlu.github.io/html/index-contact.html">联络</a></li>
 		</ul>
 	</div>
@@ -44,7 +44,7 @@
 			<li><a href="painting/mysite-painting.html">painting</a></li>
 			<li><a href="photography/mysite-photography.html">photography</a></li>
 			<li><a href="writing/mysite-writing.html">writing</a></li>
-			<li><a href="mysite-about.html">about</a></li>
+			<li><a href="../html/index-about.html">about</a></li>
 			<li><a href="../forganlu.github.io/html/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
