--- a/html/index-about.html
+++ b/html/index-about.html
@@ -13,7 +13,7 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">
+			<a href="../index.html">
 				<img src="../image/logo1.png" alt="" class="img-back">
 				<img src="../image/logo2.png" alt="" class="img-front">
 			</a>
