--- a/index-contact.html
+++ b/index-contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../css/mysite.css">
+<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
 </head>
 	
@@ -13,9 +13,9 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="www.forganlu.com">
-				<img src="../image/logo1.png" alt="" class="img-back">
-				<img src="../image/logo2.png" alt="" class="img-front">
+			<a href="index.html">  <!--'javascript:history.go(-1)'-->
+				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
+				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
 		</div>
 		
@@ -34,8 +34,8 @@
 			<li><a href="painting/mysite-painting.html">绘画</a></li>
 			<li><a href="photography/mysite-photography.html">摄影</a></li>
 			<li><a href="writing/mysite-writing.html">文字</a></li>
-			<li><a href="../html/index-about.html">关于</a></li>
-			<li><a href="../html/index-contact.html">联络</a></li>
+			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
+			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -44,8 +44,8 @@
 			<li><a href="painting/mysite-painting.html">painting</a></li>
 			<li><a href="photography/mysite-photography.html">photography</a></li>
 			<li><a href="writing/mysite-writing.html">writing</a></li>
-			<li><a href="../html/index-about.html">about</a></li>
-			<li><a href="../html/index-contact.html">contact</a></li>
+			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
+			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
 	
@@ -54,12 +54,14 @@
 <div class="about">
 	<div class="portfoliopic"></div>
 	<div class="aboutinfo">
-		<span style="background-color:white" >
-			<strong>Gan Lu</strong>
-			<p>&nbsp;</p>
-			Email: ganlu2525@outlook.com<br />
-			Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a>
-		</span>
+		<p>
+		
+			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
+			<p></p>
+			Email: <span style="background-color:rgb(60, 255, 0)" >ganlu2525@outlook.com</span><br />
+			Instagram: <span style="background-color:rgb(255, 0, 0)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></span></a>
+		
+	</p>
 	
 	</div>
 </div>
