--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<li><a href="painting/mysite-painting.html">绘画</a></li>
 			<li><a href="photography/mysite-photography.html">摄影</a></li>
 			<li><a href="writing/mysite-writing.html">文字</a></li>
-			<li><a href="../html/index-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/html/index-contact.html">联络</a></li>
+			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
+			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -44,8 +44,8 @@
 			<li><a href="painting/mysite-painting.html">painting</a></li>
 			<li><a href="photography/mysite-photography.html">photography</a></li>
 			<li><a href="writing/mysite-writing.html">writing</a></li>
-			<li><a href="../html/index-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/html/index-contact.html">contact</a></li>
+			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
+			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
 	<div class="about"></div>
