--- a/index-contact.html
+++ b/index-contact.html
@@ -31,9 +31,9 @@
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="painting/mysite-painting.html">绘画</a></li>
-			<li><a href="photography/mysite-photography.html">摄影</a></li>
-			<li><a href="writing/mysite-writing.html">文字</a></li>
+			<li><a href="../forganlu.github.io/index-painting.html">绘画</a></li>
+			<li><a href="../forganlu.github.io/index-photography.html">摄影</a></li>
+			<li><a href="../forganlu.github.io/index-writing.html">文字</a></li>
 			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
 			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
 		</ul>
@@ -41,9 +41,9 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="painting/mysite-painting.html">painting</a></li>
-			<li><a href="photography/mysite-photography.html">photography</a></li>
-			<li><a href="writing/mysite-writing.html">writing</a></li>
+			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
+			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
+			<li><a href="../forganlu.github.io/index-writing.html">writing</a></li>
 			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
 			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
 		</ul>
