--- a/index-writing.html
+++ b/index-writing.html
@@ -43,50 +43,40 @@
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
 			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a></li>
+			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
+				<ul class="secondmanu" list-style:none;>
+					<li><a href="../forganlu.github.io/index-writing.html">2018.12.30 《马鹿》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.01.09 《名字》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.05.24 《旅馆》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.12.04 《记忆空间》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.14 《温暖的海》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.10.17 《1810号房间》</a></li>
+				</ul>
+			</li>
 			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
 			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
+	<div class="about">
+		<div class="writingfront">
+			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
+			只用于中文版本。<br />
+			<p></p>
+			Under released.<br />
+			暂未发布。
+		</span>
+	</div>
+	</div>
 	
 		
 </div>
-<div class="about">
-	<div class="portfoliopic1"></div>
-	<div class="aboutinfo">
-		<p>
-		<span style="background-color:white" >
-			<strong>Gan Lu</strong>
-			<p></p>
-			Born 1998, China.
-			<br />
-			Based in Guangzhou / Hong Kong
-			<p></p>
-			BFA - 5thStudio of Oil Painting Department of Guangzhou Academic of Fine Art
-			<br />
-			MFA - Creative Media of City University of Hong Kong
-			<p>&nbsp;</p>
-			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
-			<p></p>
-			2021  <strong>Furment</strong> - Creative Media Year1 MFA show
-			<p></p>
-			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum<br />
-			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA<br />
-			2020  <strong>The choice of the graduation star in 2020</strong> - OCAT Shenzhen OCT Harbour Exhibition Site – Boxes Art Space<br />
-			2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery<br />
-			2020  <strong>GAFA Graduation Exhibition</strong> - GAFA online Art museum<br />
-			<p></p>
-			2019  <strong>Visual Games</strong> - Foshan Guicheng Art Museum<br />
-			<p></p>
-			2018  <strong>東方·來信 Inter-Youth</strong> - China Academic of Fine Art Museum<br />
-			2018  <strong>Ritz’s Dream</strong> (solo) - The Fifth Studio Exhibition Hall of GAFA<br />
-			2017  <strong>the Fifth Studio</strong> - the Art Museum of Guangzhou Academy of Fine Arts<br />
-			
-		</span>
-		</p>
-	
-	</div>
-</div>
+
+
 </main>
 
 <footer>
