--- a/index-contact.html
+++ b/index-contact.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
+<link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
 <body>
@@ -57,9 +58,10 @@
 		<p>
 		
 			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
-			<p></p>
-			Email: <span style="background-color:rgb(60, 255, 0)" >ganlu2525@outlook.com</span><br />
-			Instagram: <span style="background-color:rgb(255, 0, 0)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></span></a>
+			<p></p> 
+			Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />
+			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
+			Instagram: <span style="background-color:rgb(255, 255, 255)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span>
 		
 	</p>
 	
