--- a/index-photography.html
+++ b/index-photography.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
+<link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
 <body>
@@ -52,8 +53,7 @@
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >
 			Under released.<br />
-			暂未发布。
-		</span>
+			暂未发布。</span>
 	</div>
 
 	</div>
