--- a/index-painting.html
+++ b/index-painting.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
+<link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
 <body>
