--- a/index-writing.html
+++ b/index-writing.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
+<link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
 </head>
 	
 <body>
@@ -45,17 +46,17 @@
 			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
 			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
 				<ul class="secondmanu" list-style:none;>
-					<li><a href="../forganlu.github.io/index-writing.html">2018.12.30 《马鹿》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.01.09 《名字》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.05.24 《旅馆》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.12.04 《记忆空间》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.14 《温暖的海》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.05.29 《吃金鱼》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.10.17 《1810号房间》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">01. 2018.12.30 《马鹿》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">02. 2019.01.09 《名字》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">03. 2019.05.24 《旅馆》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">06. 2019.12.04 《记忆空间》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">07. 2020.02.14 《温暖的海》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">08. 2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">09. 2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">10. 2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">11. 2020.10.17 《1810号房间》</a></li>
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
