--- a/writing/writing-1.html
+++ b/writing/writing-1.html
@@ -44,12 +44,35 @@
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
 			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a></li>
+			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
+				<ul class="secondmanu" list-style:none;>
+					<li><a href="../forganlu.github.io/index-writing.html">2018.12.30 《马鹿》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.01.09 《名字》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.05.24 《旅馆》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2019.12.04 《记忆空间》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.14 《温暖的海》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../forganlu.github.io/index-writing.html">2020.10.17 《1810号房间》</a></li>
+				</ul>
+			</li>
 			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
 			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
 		</ul>
 	</div>	
-	<div class="about"></div>
+	<div class="about">
+		<div class="writingfront">
+			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
+			只用于中文版本。<br />
+			<p></p>
+			Under released.<br />
+			暂未发布。
+		</span>
+	</div>
+	</div>
 	
 		
 </div>
