--- a/writing/writing-1.html
+++ b/writing/writing-1.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
+<link rel="stylesheet" href="../css/mysite.css">
 <title>Ganlu</title>
-<link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
+<link rel="icon" type="image/x-icon" href="../ICON.png" />
 </head>
 	
 <body>
@@ -14,9 +14,9 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">
-				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
-				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
+			<a href="../index.html">
+				<img src="../image/logo1.png" alt="" class="img-back">
+				<img src="../image/logo2.png" alt="" class="img-front">
 			</a>
 		</div>
 		
@@ -32,45 +32,83 @@
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html">绘画</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">摄影</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">文字</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
+			<li><a href="../index-painting.html">绘画</a></li>
+			<li><a href="../index-photography.html">摄影</a></li>
+			<li><a href="../index-writing.html">文字</a></li>
+			<li><a href="../index-about.html">关于</a></li>
+			<li><a href="../index-contact.html">联络</a></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
+			<li><a href="../index-painting.html">painting</a></li>
+			<li><a href="../index-photography.html">photography</a></li>
+			<li><a href="../index-writing.html">writing</a>
 				<ul class="secondmanu" list-style:none;>
-					<li><a href="../forganlu.github.io/index-writing.html">2018.12.30 《马鹿》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.01.09 《名字》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.05.24 《旅馆》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2019.12.04 《记忆空间》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.14 《温暖的海》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.05.29 《吃金鱼》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">2020.10.17 《1810号房间》</a></li>
+					<li><a href="../writing/writing-1.html"><strong>01. 2018.12.30 《马鹿》</strong></a></li>
+					<li><a href="../index-writing.html">02. 2019.01.09 《名字》</a></li>
+					<li><a href="../index-writing.html">03. 2019.05.24 《旅馆》</a></li>
+					<li><a href="../index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../index-writing.html">06. 2019.12.04 《记忆空间》</a></li>
+					<li><a href="../index-writing.html">07. 2020.02.14 《温暖的海》</a></li>
+					<li><a href="../index-writing.html">08. 2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../index-writing.html">09. 2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../index-writing.html">10. 2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../index-writing.html">11. 2020.10.17 《1810号房间》</a></li>
 				</ul>
 			</li>
-			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
+			<li><a href="../index-about.html">about</a></li>
+			<li><a href="../index-contact.html">contact</a></li>
 		</ul>
 	</div>	
 	<div class="about">
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
 			只用于中文版本。<br />
-			<p></p>
-			Under released.<br />
-			暂未发布。
+			<p>&nbsp;</p>
+			
 		</span>
+	</div>
+	<div class="writingfront-writing">
+		<h3>《马鹿》</h3>
+		<p>文森[1]问我马鹿是不是我的亲生小孩。</p>
+		<p>“当然不是。”我回答。“我一直在吃避孕药，它们让我不排卵，我没法自然怀孕。是有一天我在街上走路的时候偶然看见一个广告，上面写着能够帮我做一个塑料婴儿和代孕，于是我就联系了他们。这个公司技术非常先进，甚至能够设置自己小孩的死亡日期。于是我就设置了。”开始下雨了，我和文森跑到旁边的屋檐下躲雨。最近下雨下得非常频繁。</p>
+		<p>“合法吗？”他拍拍身上的雨水。</p>
+		<p>“什么意思？”</p>
+		<p>“意思是你在中国做这样的买卖合法吗？”他又继续问。</p>
+		<p>“当然！不然为什么他们有这么大的广告牌！”我感到惊讶。我盯着他，希望他不要再问这些愚蠢的问题，现在是当代社会，没什么不合法，人类可以将动物皮毛当作衣服挂在身上，为什么这个不可以。如果要说合法不合法这个问题，那我可以举超过一万个比这个过分的例子，真是个疯子，现在是当代社会！没有什么不可以！况且他问的这些问题令我感到非常的不适。“真是可笑！”我补充了一句。</p>
+		<p>“那么你要求他们帮你设置了马鹿的死亡日期吗？”他又问，他好像什么都想知道，好像在监视我，好像我是他的仆人。好像他问了什么我就得回答什么，又像是我的上司，这种质问的语气令人厌恶。但我还是回答了：“设置了3年。”他终于沉默了。这是好事。</p>
+		<p>我们甚至没注意到雨已经停了。于是我们继续走。</p>
+		<p>文森是个疯子。我不害怕他问我一些私密的问题，由于他的脑子少了什么，所以他很难长时间记住别人的八卦，就像刚刚问我的那些问题，我敢说他回到家就会忘记。所以他每次和我做爱都有新鲜感，因为他是一个记不住我的屁股蛋长什么样的疯子男人。这样我对他就非常忠心，我并不害怕他会去找别的女人做爱，虽然我一点也不在意他的这些事。</p>
+		<p>我的马鹿出生在2018年11月16日，几点我就不知道了，是马氏集团的人将他送到家门口的，就像送子鹤一样，我想要，他们就送了一个给我，我需要做的只支付一些钱。那时文森正在睡觉，门铃响了一下我就冲去开门了，我早上就收到送子短信了，我知道我的马鹿在今天之内就会送上门。她就像我想象的一样可爱迷人，她的皮肤非常光滑细腻，她的手脚小的我无法想象，我从来没见过婴儿。我签收之后他们还送了很多东西，婴儿推车、婴儿全套的小衣服、还有奶粉奶瓶等等。但是她没过一会就把自己的裤子弄脏了，她拉了很多大便和尿尿在裤子上面。我开始像一个妈妈一样为她清理排泄物，喂奶，哄她，和她自拍。我迫不及待带她去见文森，文森见她的第一眼也觉得她很美丽可爱，但很快就没有了兴趣。觉得马鹿很烦，很吵闹，有一个女朋友已经够了，他不想要更多。也许他根本就不知道母爱到底是一个什么样的东西，也许他不懂爱是什么。但我只是心里再说这些话，我没敢大声说出来，因为我也不知道。我可能也是一个塑料婴儿，只是买我的那个人（我妈）可能没有设置死亡日期，或者选择了自然死亡。</p>
+		<p>虽然马鹿3岁就得死，但是在她34个月的时候就被偷走了。</p>
+		<p>？</p>
+		<p>我只想问公司的售后有没有这个的相关服务。于是我马上发邮件告诉了公司这件事，他们回复我说他们已经帮我报了警，警察会尽力帮我找到我的女儿。我真难过，晚上睡觉的时候没有她在我身边真是觉得心里少了什么，真担心她在外面出了什么事。</p>
+		<p>文森对这件事一点都不上心。他不认为马鹿是他女儿。</p>
+		<p>之后我很混沌地度过了六个月。六个月里我没有工作，我的上司把我开除了，他不想办公室里有我这样晦气的人出现，所以我一天到晚呆在家里，我从家的这一头走到另外一个尽头要用17’’76’’’，但有时候又不一样，有时候跳着过去会快一些。我突然开始很怀念小时候和我的一些小伙伴们玩的游戏，跳房子，跳皮筋，还有很多叠纸游戏。我在家无聊的时候就会开始玩这些。</p>
+		<p>2021年3月12号，有人联系我，说我的女儿找到了，但她已经死了。验尸的人说身上有非常多处鞭打的伤痕，是鞭打致死。我不太相信他们，因为他们看起来也没有多专业，然后他们叫我去认领尸体。</p>
+		<p>我去了。我不想去，因为广东这个时候的天气非常冷，而且我们没有车，所以我要在大马路上站几十分钟等待公交车。我看不出这个人才3岁大，就遭遇到这样的事情。她的身体已经开始发青发紫。他们已经把她的尸体清洗干净了。我伸手摸了摸她的脸，已经没有了弹性，不小心给我戳了个指印，像记忆海绵一样没办法马上回弹。我努力回想但是却什么也想不起来。这种感觉真难受。我心想我不会让这种丑陋的、羞耻的事进入我的生活，于是我在他们的单上签下了我的名字和“否”字。</p>
+		<p>文森抱着我，他害怕我会难过。但我不需要。</p>
+		<p>我记得我去过泰国的医学博物馆，里面展示了各种各样福尔马林浸泡着的畸形婴儿，那时候我是害怕的。我的同伴甚至拍了照片（虽然进去之前工作人员提醒过我们不能拍照），我不敢，当时我认为拍下了照片就会把这些厄运带到自己身上。但如今我也不确定这些是否灵验了。</p>
+		<p>但是到了2022年周围，我经常感到难过，非常难过，难过得每天都在流眼泪。医生给我开了药。我吃了三个月，没控制住。然后我越来越难过了。两年时间里，时间过的很快，我在痛苦之中度过了两年。两年内我都没有看医生是因为我觉得我只是普通难过。直到有一天我想到了自杀。然后我意识到假如一个人开始想自杀，那他一定有病。但我只是没了我悉心照顾了两年多的女儿，在大家看来没必要这么痛苦。</p>
+		<p>“文森，我非常难过。”我终于忍不住对文森说话了。他在一旁抽烟。</p>
+		<p>“那你要不要去游个泳？或者来和我一起抽根烟？如果你想吸大麻，他们在我的床头柜里。”他继续抽烟。</p>
+		<p>“我上个星期差点跳楼了。”我盯着他，希望他能给我一些建议，3年前我们刚认识的时候他也跟我说过类似的话，我不记得我当时回答了些什么，我只是觉得他这样非常幼稚与可笑。但如今我也变得和他一样了。</p>
+		<p>“那么，结果怎么样？”</p>
+		<p>“没有结果，我想到马鹿死了我很难过，但是我又不敢。”我摸摸我的脚趾头，指甲已经长的要撑破袜子了。</p>
+		<p>他把烟蒂往窗外一丢，回过头跟我说：“想做什么就去做吧，不要让不相干的事情阻止了你。不然世界上就没有伟大的艺术家了。”</p>
+		<p>然后对话就结束了，这次对话也没有结果。我认为他没有在认真回答我的问题。敷衍了事，没办法，疯子可能也想不出什么好主意。</p>
+		<p>不过在今天来看，一个人想自杀没什么了不起。一个婴儿死了也没什么了不起，世界上还有很多个婴儿。因为世界上的人太多了，上帝开始不高兴了，所以他让一些人自杀。那些没自杀成功的，都是上帝给了第二次重生的机会，他们应该好好珍惜。</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		甘露<br />
+		2018.12.30
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+
 	</div>
 	</div>
 	
