--- a/index-writing.html
+++ b/index-writing.html
@@ -46,7 +46,7 @@
 			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
 			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
 				<ul class="secondmanu" list-style:none;>
-					<li><a href="../forganlu.github.io/index-writing.html">01. 2018.12.30 《马鹿》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">02. 2019.01.09 《名字》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">03. 2019.05.24 《旅馆》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
@@ -68,8 +68,8 @@
 			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
 			只用于中文版本。<br />
 			<p></p>
-			Under released.<br />
-			暂未发布。
+			Incomplete released.<br />
+			未完全发布。
 		</span>
 	</div>
 	</div>
