--- a/index-writing.html
+++ b/index-writing.html
@@ -69,8 +69,23 @@
 			只用于中文版本。<br />
 			<p></p>
 			Incomplete released.<br />
-			未完全发布。
-		</span>
+			未完全发布。</span>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<span style="background-color:rgb(217, 255, 202)" >
+			文字是人类交流的方式，是我和我自己交流的方式。<br />
+			是我的日记簿，我通过文字写下自己的所见所闻。<br />
+			是检查自己生活的一个反思过程。<br />
+			是放松的过程。<br />
+			是我的记忆力。<br />
+			---------------------------------------<br />
+			Words is the way that people communicate, is they way i communicate with myself.<br />
+			It's my notebook, I wrote down what i heard and seen.<br />
+			It's a process of introspection, life inspection.<br />
+			A process of relax.<br />
+			My memory.<br />
+			<p></p></span>
+		
 	</div>
 	</div>
 	
