--- a/index-writing.html
+++ b/index-writing.html
@@ -5,6 +5,32 @@
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
+
+
+<!--<SCRIPT language=JavaScript> 
+	function password() { 
+	var testV = 1; 
+	var pass1 = prompt('Please enter password',''); 
+	while (testV < 3) { 
+	if (!pass1) 
+	history.go(-1); 
+	if (pass1 == "123456") { 
+	alert('Right password');  
+	break; 
+	} 
+	testV+=-1; 
+	var pass1 = prompt('Wrong password'); 
+	} 
+	if (pass1!="password" & testV ==3) 
+	history.go(-1); 
+	return " "; 
+	} 
+	document.write(password()); -->
+
+
+
+
+
 </head>
 	
 <body>
@@ -70,21 +96,27 @@
 			<p></p>
 			Incomplete released.<br />
 			未完全发布。</span>
+			<p></p>
+			<span style="background-color:rgb(255, 0, 0)" >
+			Password request please go to <a href="../forganlu.github.io/index-contact.html">CONTACT</a>.<br />
+			请求阅读请<a href="../forganlu.github.io/index-contact.html">联系</a>。</span>
+			
 			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<span style="background-color:rgb(217, 255, 202)" >
+			<p style="text-align:right">
+			<span style="background-color:rgb(255, 255, 255)">
 			文字是人类交流的方式，是我和我自己交流的方式。<br />
 			是我的日记簿，我通过文字写下自己的所见所闻。<br />
 			是检查自己生活的一个反思过程。<br />
 			是放松的过程。<br />
 			是我的记忆力。<br />
-			---------------------------------------<br />
+			--------------<br />
 			Words is the way that people communicate, is they way i communicate with myself.<br />
 			It's my notebook, I wrote down what i heard and seen.<br />
 			It's a process of introspection, life inspection.<br />
 			A process of relax.<br />
 			My memory.<br />
 			<p></p></span>
+		</p>
 		
 	</div>
 	</div>
