--- a/index-writing.html
+++ b/index-writing.html
@@ -73,7 +73,7 @@
 			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
 				<ul class="secondmanu" list-style:none;>
 					<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">02. 2019.01.09 《名字》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">03. 2019.05.24 《旅馆》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
 					<li><a href="../forganlu.github.io/index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
@@ -98,8 +98,8 @@
 			未完全发布。</span>
 			<p></p>
 			<span style="background-color:rgb(255, 0, 0)" >
-			Password request please go to <a href="../forganlu.github.io/index-contact.html">CONTACT</a>.<br />
-			请求阅读请<a href="../forganlu.github.io/index-contact.html">联系</a>。</span>
+			Password request please<a href="mailto:ganlu2525@outlook.com"><strong> email me</strong></a>.<br />
+			请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span>
 			
 			<p>&nbsp;</p>
 			<p style="text-align:right">
