--- a/writing/writing-1.html
+++ b/writing/writing-1.html
@@ -94,7 +94,7 @@ return false;
 			<li><a href="../index-writing.html">writing</a>
 				<ul class="secondmanu" list-style:none;>
 					<li><a href="../writing/writing-1.html"><strong>01. 2018.12.30 《马鹿》</strong></a></li>
-					<li><a href="../index-writing.html">02. 2019.01.09 《名字》</a></li>
+					<li><a href="../writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
 					<li><a href="../index-writing.html">03. 2019.05.24 《旅馆》</a></li>
 					<li><a href="../index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
 					<li><a href="../index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
