--- a/index-writing.html
+++ b/index-writing.html
@@ -74,15 +74,15 @@
 				<ul class="secondmanu" list-style:none;>
 					<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
 					<li><a href="../forganlu.github.io/writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">03. 2019.05.24 《旅馆》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">06. 2019.12.04 《记忆空间》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">07. 2020.02.14 《温暖的海》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">08. 2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">09. 2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">10. 2020.05.29 《吃金鱼》</a></li>
-					<li><a href="../forganlu.github.io/index-writing.html">11. 2020.10.17 《1810号房间》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-4.html">04. 2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-5.html">05. 2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-6.html">06. 2019.12.04 《记忆空间》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-7.html">07. 2020.02.14 《温暖的海》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-8.html">08. 2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-10.html">10. 2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../forganlu.github.io/writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
@@ -93,10 +93,7 @@
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >Chinese version only.<br />
 			只用于中文版本。<br />
-			<p></p>
-			Incomplete released.<br />
-			未完全发布。</span>
-			<p></p>
+			<p></p></span>
 			<span style="background-color:rgb(255, 0, 0)" >
 			Password request please<a href="mailto:ganlu2525@outlook.com"><strong> email me</strong></a>.<br />
 			请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span>
@@ -109,7 +106,7 @@
 			是检查自己生活的一个反思过程。<br />
 			是放松的过程。<br />
 			是我的记忆力。<br />
-			--------------<br />
+			<br />
 			Words is the way that people communicate, is they way i communicate with myself.<br />
 			It's my notebook, I wrote down what i heard and seen.<br />
 			It's a process of introspection, life inspection.<br />
