--- a/writing/writing-2.html
+++ b/writing/writing-2.html
@@ -95,15 +95,15 @@ return false;
 				<ul class="secondmanu" list-style:none;>
 					<li><a href="../writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
 					<li><a href="../writing/writing-2.html"><strong>02. 2019.01.09 《名字》</strong></a></li>
-					<li><a href="../index-writing.html">03. 2019.05.24 《旅馆》</a></li>
-					<li><a href="../index-writing.html">04. 2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../index-writing.html">05. 2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../index-writing.html">06. 2019.12.04 《记忆空间》</a></li>
-					<li><a href="../index-writing.html">07. 2020.02.14 《温暖的海》</a></li>
-					<li><a href="../index-writing.html">08. 2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../index-writing.html">09. 2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../index-writing.html">10. 2020.05.29 《吃金鱼》</a></li>
-					<li><a href="../index-writing.html">11. 2020.10.17 《1810号房间》</a></li>
+					<li><a href="../writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
+					<li><a href="../writing/writing-4.html">04. 2019.10.22 《马鹿之死》</a></li>
+					<li><a href="../writing/writing-5.html">05. 2019.11.05 《美丽新世界》</a></li>
+					<li><a href="../writing/writing-6.html">06. 2019.12.04 《记忆空间》</a></li>
+					<li><a href="../writing/writing-7.html">07. 2020.02.14 《温暖的海》</a></li>
+					<li><a href="../writing/writing-8.html">08. 2020.02.17 《燕子啊燕子》</a></li>
+					<li><a href="../writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
+					<li><a href="../writing/writing-10.html">10. 2020.05.29 《吃金鱼》</a></li>
+					<li><a href="../writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
 				</ul>
 			</li>
 			<li><a href="../index-about.html">about</a></li>
