--- a/writing/writing-1.html
+++ b/writing/writing-1.html
@@ -38,7 +38,7 @@ return false;
 	while (testV < 2) {   
 	if (!pass1)   
 	history.go(-1);   
-	if (pass1 == "0525") {//初始密码123   
+	if (pass1 == "g") {//初始密码123   
 	alert('Password correct');   
 	break;   
 	}   
